@@ -1,11 +1,11 @@
-(*  Title:      HOL/Nunchaku/Nunchaku.thy
-    Author:     Jasmin Blanchette, Inria Nancy, LORIA, MPII
-    Copyright   2015, 2016
+(*  Title:      HOL/Nunchaku.thy
+    Author:     Jasmin Blanchette, VU Amsterdam
+    Copyright   2015, 2016, 2017
 
 Nunchaku: Yet another counterexample generator for Isabelle/HOL.
 
-Nunchaku relies on an external program of the same name. The program is still
-being actively developed. The sources are available at
+Nunchaku relies on an external program of the same name. The sources are
+available at
 
     https://github.com/nunchaku-inria
 
@@ -15,7 +15,7 @@ for CVC4 and Kodkodi are necessary to use these backend solvers.
 *)
 
 theory Nunchaku
-imports Main
+imports Nitpick
 keywords
   "nunchaku" :: diag and
   "nunchaku_params" :: thy_decl
@@ -29,16 +29,16 @@ definition The_unsafe :: "('a \<Rightarrow> bool) \<Rightarrow> 'a" where
 definition rmember :: "'a set \<Rightarrow> 'a \<Rightarrow> bool" where
   "rmember A x \<longleftrightarrow> x \<in> A"
 
-ML_file "Tools/nunchaku_util.ML"
-ML_file "Tools/nunchaku_collect.ML"
-ML_file "Tools/nunchaku_problem.ML"
-ML_file "Tools/nunchaku_translate.ML"
-ML_file "Tools/nunchaku_model.ML"
-ML_file "Tools/nunchaku_reconstruct.ML"
-ML_file "Tools/nunchaku_display.ML"
-ML_file "Tools/nunchaku_tool.ML"
-ML_file "Tools/nunchaku.ML"
-ML_file "Tools/nunchaku_commands.ML"
+ML_file "Tools/Nunchaku/nunchaku_util.ML"
+ML_file "Tools/Nunchaku/nunchaku_collect.ML"
+ML_file "Tools/Nunchaku/nunchaku_problem.ML"
+ML_file "Tools/Nunchaku/nunchaku_translate.ML"
+ML_file "Tools/Nunchaku/nunchaku_model.ML"
+ML_file "Tools/Nunchaku/nunchaku_reconstruct.ML"
+ML_file "Tools/Nunchaku/nunchaku_display.ML"
+ML_file "Tools/Nunchaku/nunchaku_tool.ML"
+ML_file "Tools/Nunchaku/nunchaku.ML"
+ML_file "Tools/Nunchaku/nunchaku_commands.ML"
 
 hide_const (open) unreachable The_unsafe rmember
 
